Show gap texts in Quiz. Extract gap data as solutions when saving. Fix bugs in txt.html and src.html templates.  (<div class=„clear“> ….  could also be added as a blank last segment, when rendering the segments!)

--- a/codequiz-server/builder/static/builder/style.css
+++ b/codequiz-server/builder/static/builder/style.css
@@ -116,7 +116,7 @@ textarea.source {
 }
 
 /* gray background to indicate a comment segment */
-#sortable li.gap-fill {
+#sortable li.gap-fill-text {
     background-color: #b6b6b4;
 }
 
